<resources>
    <string name="app_name">Authre</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_auth_sig">Keyword</string>
    <string name="pref_hint_auth_sig">auth</string>
    <string name="pref_summary_auth_sig">The keyword required to forward notifications. Leave blank to send all Ingress notifications.</string>
    <string name="pref_default_auth_sig">auth</string>

    <string name="pref_title_auth_url">URL</string>
    <string name="pref_hint_auth_url">http://example.com/authlistener.php</string>
    <string name="pref_summary_auth_url">The URL that notifications will be forwarded to.</string>
    <string name="pref_default_auth_url">http://akre.co.nz/authlistener.php</string>

    <string name="pref_title_api_key">API Key</string>
    <string name="pref_hint_api_key">(optional)</string>
    <string name="pref_summary_api_key">Your API Key, if required.</string>
    <string name="pref_default_api_key"></string>

    <string name="action_settings">Settings</string>
    <string name="default_log_text">Authentication log started. \nForwarded notifications will be logged here.</string>
</resources>
