<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations" />-->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_auth_sig"
        android:inputType="text"
        android:key="auth_sig"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_auth_sig"
        android:hint="@string/pref_hint_auth_sig"
        android:summary="@string/pref_summary_auth_sig"/>
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_auth_url"
        android:hint="@string/pref_hint_auth_url"
        android:inputType="textUri"
        android:key="auth_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_summary_auth_url"
        android:title="@string/pref_title_auth_url" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="none"
        android:defaultValue="@string/pref_default_api_key"
        android:hint="@string/pref_hint_api_key"
        android:inputType="text"
        android:key="api_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_summary_api_key"
        android:title="@string/pref_title_api_key" />
</PreferenceScreen>
